--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://character_body_3d.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,23 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://multiplayr_sceen.tscn")
+open_scenes=PackedStringArray("res://multiplayr_sceen.tscn", "res://character_body_3d.tscn")
 current_scene="res://multiplayr_sceen.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="maximized"
+mode="windowed"
 position=Vector2i(0, 50)
+size=Vector2i(2880, 1642)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://bullet.gd", "res://character_body_3d.gd", "res://multiplayr_sceen.gd", "res://norayHoster.gd"]
+selected_script="res://multiplayr_sceen.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
