--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -6,3 +6,24 @@ executable_path="/Users/heathermarriott/Library/Application Support/Steam/steama
 
 scenes=["res://character_body_3d.tscn", "res://multiplayr_sceen.tscn"]
 scripts=["res://norayHoster.gd", "res://multiplayr_sceen.gd", "res://bullet.gd", "res://character_body_3d.gd"]
+
+[dialog_bounds]
+
+project_settings=Rect2(288, 200, 2304, 1400)
+
+[debug_options]
+
+run_main_feature_tags=""
+multiple_instances_enabled=true
+run_instances_config=Array[Dictionary]([{
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}])
+run_instance_count=2.0
